# sales-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CI_FINAL_TEST.txt  CI_MIGRATION_VERIFIED.md  CI_TEST_111435.txt  Dockerfile  README.md  README_DEPLOY.md  alembic.ini  anniu.md  changmodel.sh  docker-compose.yml  milestone_plan.md  models.json  package-lock.json  pyproject.toml  tiyanbanshixian.md  福多多-产品知识-正确答案与出错原因V1.xlsx
.claude/: settings.local.json
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json  .temp-deepeval-cache.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
.trellis/: .template-hashes.json
changelog/: 2026-06-22.md  2026-06-25.md  2026-06-26.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md
config/: default.yaml  llm_call_defaults.yaml  llm_config.yaml  prompts.yaml
console/: .env.development  .env.production  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts  vitest.config.ts
data/: synonyms.json
deploy/: DEPLOY_USAGE.md  Dockerfile  code-sync-targets.json  deploy-remote.sh  deploy-targets-dev.json  deploy-targets.json  eval.env.example  tenant.env.example  tenants.benji.json  tenants.example.json  tenants.hangzhou.json  tenants.heyuan.json  tenants.prod2.json  tenants.prod3.json  tenants.test.json
docs/: 10q-ontology-rag-report.md  10q-ontology-rag-v2.md  PILOT_ONBOARDING_GUIDE.md  PILOT_OPERATING_PLAYBOOK.md  claude-code-iteration-mcp.md  deployment-roles.md  knowledge-iteration-ops.md  ontology-neo4j-ops.md  福多多-提示词与节点.md
eval/: README_DEEPEVAL.md  deepeval_conversation_eval.py  deepeval_dataset.py  deepeval_eval.py  deepeval_html_report.py  deepeval_metrics.py  deepeval_optimize.py  deepeval_persistence.py  deepeval_pytest_plugin.py  deepeval_risk_eval.py  deepeval_run.sh  deepeval_synthesize.py  deepeval_synthesize_dynamic.py  deepeval_test_cases.py  ground_truth_30q.json  merge_results.py  qa_extracted.md  question_evolution.py  question_quality.py  questions.md  risk_test_questions.json  run_conversation_eval.py  run_long_term_memory_eval.py  run_sales_action_eval.py  run_short_term_memory_eval.py  run_user_profile_memory_eval.py  smoke_test.jsonl  workflow_test.jsonl
infra/: cicd-compose.yml  domain.crt  domain.key  gitea-admin-token.txt  registry-ca.crt
nginx/: nginx.conf
scripts/: README.md  add_agent_id_columns.sql  add_conversation_stage.sql  add_feedback_review_status.sql  bootstrap-new-master.sh  check-all-tenants.sh  check-tenant-routing.sh  check-tenant.sh  check_schema_consistency.py  (+19 more)
(+1141 files in other folders)
