[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-agent"
version = "0.1.0"
description = "ToB 销售陪跑 Agent 本地原型"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "openai>=1.30.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "dingtalk-stream>=0.20.0",
    "python-multipart>=0.0.6",
    "alembic>=1.13.0",
    "neo4j>=5.23.0",
    "python-docx>=1.0.0",
    "pymupdf>=1.23.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "json-repair>=0.7.0",
    "langchain-core>=1.4.7",
    "langgraph>=1.2.0,<1.4",
    "langgraph-checkpoint-postgres>=2.0,<4",
    "deepeval>=4.0.0",
    "mcp>=1.27,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "deepeval[inspect]>=4.0.0",
]

[project.scripts]
sales-agent = "sales_agent.cli:app"
sales-agent-mcp = "sales_agent.mcp_server.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pip]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.pip.extra-index-urls]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require live infrastructure (e.g. PostgreSQL test DB)",
]
